Fix union argument regression when marshaling from python

Check for union members when marshaling boxed types from Python.
This is a regression caused by stricter type checking added when
merging code from pygi-argument.c.
Re-add pyg_boxed_check to the same bit of code in addition to
__gtype__ checking to avoid a double regression.

https://bugzilla.gnome.org/show_bug.cgi?id=703873